--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rbxts/bytenet-fixed",
-  "version": "1.0.1-0",
+  "version": "1.0.0-rc.1",
   "description": "",
   "main": "out/init.lua",
   "scripts": {
@@ -19,6 +19,10 @@
   ],
   "publishConfig": {
     "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": ""
   },
   "devDependencies": {
     "@rbxts/compiler-types": "^3.0.0-types.0",
