--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rbxts/bytenet-fixed",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0-rc.2",
   "description": "",
   "main": "out/init.lua",
   "scripts": {
@@ -8,7 +8,12 @@
     "watch": "rbxtsc -w",
     "prepublishOnly": "npm run build"
   },
-  "keywords": [],
+  "keywords": [
+    "roblox",
+    "roblox-ts",
+    "rbxts",
+    "bytenet"
+  ],
   "author": "",
   "license": "MIT",
   "type": "commonjs",
