--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rbxts/bytenet-fixed",
-  "version": "1.0.0-rc.3",
+  "version": "1.0.0",
   "description": "",
   "main": "out/init.lua",
   "scripts": {
