--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/wo-der/bytenet-fixed"
   },
   "devDependencies": {
     "@rbxts/compiler-types": "^3.0.0-types.0",
